<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp">
        <com.github.florent37.expansionpanel.ExpansionHeader
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/sampleHeader"
        app:expansion_headerIndicator="@id/headerIndicator"
        app:expansion_layout="@id/expansionLayout"
        app:expansion_toggleOnClick="true"
            android:layout_marginBottom="8dp">

        <RelativeLayout
            android:background="@android:color/white"
            android:layout_height="48dp"
            android:layout_width="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/compromiso01_name"
                android:textColor="#3E3E3E" />

            <!--<TextView
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_width="wrap_content"
                android:text="@string/compromiso01_name"
                android:textColor="#AAA" />-->

            <androidx.appcompat.widget.AppCompatImageView
                android:adjustViewBounds="true"
                android:id="@+id/headerIndicator"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp" />

        </RelativeLayout>

    </com.github.florent37.expansionpanel.ExpansionHeader>
        <com.github.florent37.expansionpanel.ExpansionLayout
            android:id="@+id/expansionLayout"
            app:expansion_expanded="false"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <LinearLayout
                android:id="@+id/container"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="8dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/p1"/>
                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/p1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="8dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/p2"/>
                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/p2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"/>
                </LinearLayout>

            </LinearLayout>

        </com.github.florent37.expansionpanel.ExpansionLayout>

        <com.github.florent37.expansionpanel.ExpansionHeader
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/sampleHeader1"
            app:expansion_headerIndicator="@id/headerIndicator"
            app:expansion_layout="@id/expansionLayout1"
            app:expansion_toggleOnClick="true"
            android:layout_marginBottom="8dp">

            <RelativeLayout
                android:background="@android:color/white"
                android:layout_height="48dp"
                android:layout_width="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_centerVertical="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/compromiso02_name"
                    android:textColor="#3E3E3E" />

                <!--<TextView
                    android:layout_centerVertical="true"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="120dp"
                    android:layout_width="wrap_content"
                    android:text="@string/compromiso01_name"
                    android:textColor="#AAA" />-->

                <androidx.appcompat.widget.AppCompatImageView
                    android:adjustViewBounds="true"
                    android:id="@+id/headerIndicator"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_width="wrap_content"
                    app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp"
                    tools:ignore="DuplicateIds" />

            </RelativeLayout>

        </com.github.florent37.expansionpanel.ExpansionHeader>
        <com.github.florent37.expansionpanel.ExpansionLayout
            android:id="@+id/expansionLayout1"
            app:expansion_expanded="false"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <LinearLayout
                android:id="@+id/container1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="8dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pr1"/>
                    <androidx.appcompat.widget.AppCompatSpinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="8dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pr2"/>
                    <androidx.appcompat.widget.AppCompatSpinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="8dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pr3"/>
                    <androidx.appcompat.widget.AppCompatSpinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="8dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pr4"/>
                    <androidx.appcompat.widget.AppCompatSpinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        />
                </LinearLayout>

            </LinearLayout>

        </com.github.florent37.expansionpanel.ExpansionLayout>


    </LinearLayout>

</ScrollView>